--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <body>
         <header class="site-header">
             <h1><a href="/">PHP <em>The Right Way</em></a></h1>
-            <div class="build-date">最后更新于: {{ site.time }} 由 <a href="https://laravel-china.org/" target="_blank" >Laravel China 社区</a> 维护</div>
+            <div class="build-date">此版本翻译于 2017 年，最新版本的请前往 <a href="https://learnku.com/docs/php-the-right-way/PHP8.0" target="_blank">《PHP 之道（PHP The Right Way 中文长久维护版）》</a></div>
             <div class="share">
                 <a class="btn-share" href="http://service.weibo.com/share/share.php?url=https://laravel-china.github.io/php-the-right-way&title=PHP+The+Right+Way+PHP+之道" target="_blank">分享到微博</a>
                 <br>
